--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/enter_number_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:layout_margin="25dp"
+        android:fontFamily="@font/aclonica"
+        android:text="Enter number"
+        android:textColor="@color/purple_200"
+        android:textFontWeight="@android:integer/config_longAnimTime"
+        android:textSize="25dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/number_edit_text"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/aclonica"
+        android:hint="Введите число"
+        android:inputType="number"
+        android:minHeight="48dp"
+        android:textColor="@color/teal_700" />
+
+    <Switch
+        android:id="@+id/number_switch_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:minHeight="48dp"
+        android:text="Целое число"
+        android:textColor="@color/teal_200" />
+
+    <Button
+        android:id="@+id/transform_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:fontFamily="cursive"
+        android:text="Преобразовать число в текст"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        android:typeface="serif"
+        android:textColor="@color/white"
+        android:background="@color/black"
+         />
+
+    <CheckBox
+        android:id="@+id/save_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:fontFamily="monospace"
+        android:minHeight="48dp"
+        android:text="Сохранить формат"
+        android:textColor="@color/green" />
+
+    <ToggleButton
+        android:id="@+id/toggle_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="ToggleButton"
+        android:textOff="Включить фантазию"
+        android:textOn="Выключить фантазию"
+        android:background="@color/red"/>
+
+</LinearLayout>
